src/main/default/objects/aforza__Outlet_Asset__c/fields/Add_call_to_your_coverage_and_baseline__c.field-meta.xml
<CustomField>
    <fullName>Add_call_to_your_coverage_and_baseline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Productivity Audit</description>
    <inlineHelpText>Productivity Audit</inlineHelpText>
    <label>Add call to your coverage and baseline?</label>
    <type>Checkbox</type>
</CustomField>