src/main/default/objects/aforza__Outlet_Asset__c/fields/aforza__Type__c.field-meta.xml
<CustomField>
    <fullName>aforza__Type__c</fullName>
    <description>The type of outlet asset.</description>
    <inlineHelpText>The type of outlet asset.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Merchandise</fullName>
            </value>
            <value>
                <fullName>Competitor Product</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>