src/main/default/objects/aforza__Outlet_Asset__c/fields/Barr_Family_All_SKU_s__c.field-meta.xml
<CustomField>
    <fullName>Barr_Family_All_SKU_s__c</fullName>
    <description>Productivity</description>
    <inlineHelpText>Productivity</inlineHelpText>
    <label>Barr Family - All SKU&apos;s</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>