src/main/default/objects/aforza__Outlet_Asset__c/fields/BenchmarkDate__c.field-meta.xml
<CustomField>
    <fullName>BenchmarkDate__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benchmark Date</label>
    <type>Date</type>
</CustomField>