src/main/default/objects/aforza__Outlet_Asset__c/fields/BenchmarkRate__c.field-meta.xml
<CustomField>
    <fullName>BenchmarkRate__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benchmark Rate</label>
    <type>Text</type>
</CustomField>