src/main/default/objects/aforza__Outlet_Asset__c/fields/BenchmarkScore__c.field-meta.xml
<CustomField>
    <fullName>BenchmarkScore__c</fullName>
    <inlineHelpText>Score of the first visit done within any Fiscal year.</inlineHelpText>
    <defaultValue>0</defaultValue>
    <label>Benchmark Score</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>