src/main/default/objects/aforza__Outlet_Asset__c/fields/Built_a_Display__c.field-meta.xml
<CustomField>
    <fullName>Built_a_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Built a Display</label>
    <type>Checkbox</type>
</CustomField>