src/main/default/objects/aforza__Outlet_Asset__c/fields/BuyerAvailability__c.field-meta.xml
<CustomField>
    <fullName>BuyerAvailability__c</fullName>
    <description>Call Audit</description>
    <inlineHelpText>Call Audit</inlineHelpText>
    <label>Buyer Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer Was Available</fullName>
            </value>
            <value>
                <fullName>Buyer Does not Work Here</fullName>
            </value>
            <value>
                <fullName>Buyer was Out</fullName>
            </value>
            <value>
                <fullName>Buyer Works Different Hours</fullName>
            </value>
            <value>
                <fullName>Outlet Has Closed Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>