src/main/default/objects/aforza__Outlet_Asset__c/fields/Did_the_retailer_agree_to_buy_any_New_SK__c.field-meta.xml
<CustomField>
    <fullName>Did_the_retailer_agree_to_buy_any_New_SK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Did the retailer agree to buy any New SK</label>
    <type>Checkbox</type>
</CustomField>