src/main/default/objects/aforza__Outlet_Asset__c/fields/DidRetailerAgreeToBuyAnyNewSk__c.field-meta.xml
<CustomField>
    <fullName>DidRetailerAgreeToBuyAnyNewSk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Did the retailer agree to buy any New SK</label>
    <type>Checkbox</type>
</CustomField>