src/main/default/objects/aforza__Outlet_Asset__c/fields/Does_the_Outlet_Stock_Coke_Zero_500_mL_P__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Outlet_Stock_Coke_Zero_500_mL_P__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Does the Outlet Stock Coke Zero 500 mL P</label>
    <type>Checkbox</type>
</CustomField>