src/main/default/objects/aforza__Outlet_Asset__c/fields/DoesTheOutletStockCokeZero500MlP__c.field-meta.xml
<CustomField>
    <fullName>DoesTheOutletStockCokeZero500MlP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Does the Outlet Stock Coke Zero 500 mL P</label>
    <type>Checkbox</type>
</CustomField>