src/main/default/objects/aforza__Outlet_Asset__c/fields/DoesTheOutletStockRubiconMangoStil__c.field-meta.xml
<CustomField>
    <fullName>DoesTheOutletStockRubiconMangoStil__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Does the Outlet Stock Rubicon Mango Stil</label>
    <type>Checkbox</type>
</CustomField>