src/main/default/objects/aforza__Outlet_Asset__c/fields/FocusFiveGroup__c.field-meta.xml
<CustomField>
    <fullName>FocusFiveGroup__c</fullName>
    <formula>aforza__Product__r.FocusFiveGroup__c</formula>
    <label>Focus 5 Group</label>
    <type>Text</type>
</CustomField>