src/main/default/objects/aforza__Outlet_Asset__c/fields/FocusFiveProduct__c.field-meta.xml
<CustomField>
    <fullName>FocusFiveProduct__c</fullName>
    <formula>aforza__Product__r.FocusFiveProduct__c</formula>
    <label>Focus 5 Product</label>
    <type>Checkbox</type>
</CustomField>