src/main/default/objects/aforza__Outlet_Asset__c/fields/FocusFiveStatus__c.field-meta.xml
<CustomField>
    <fullName>FocusFiveStatus__c</fullName>
    <formula>IF (FocusFiveProduct__c,
CASE (
    aforza__Account__r.FieldSalesRegion__c,
				&quot;England North&quot;, IF($CustomMetadata.ProductSetting__mdt.OrgDefaultProductSettings.FocusFiveEngland__c + IF(ISBLANK(aforza__Purchase_Date__c), DATE(2022,01,01), aforza__Purchase_Date__c) &lt;= TODAY(), &quot;Lapsed&quot;, &quot;Not Lapsed&quot;),
				&quot;England South&quot;, IF($CustomMetadata.ProductSetting__mdt.OrgDefaultProductSettings.FocusFiveEngland__c + IF(ISBLANK(aforza__Purchase_Date__c), DATE(2022,01,01), aforza__Purchase_Date__c) &lt;= TODAY(), &quot;Lapsed&quot;, &quot;Not Lapsed&quot;),
				&quot;Scotland East&quot;, IF($CustomMetadata.ProductSetting__mdt.OrgDefaultProductSettings.FocusFiveScotland__c + IF(ISBLANK(aforza__Purchase_Date__c), DATE(2022,01,01), aforza__Purchase_Date__c) &lt;= TODAY(), &quot;Lapsed&quot;, &quot;Not Lapsed&quot;),
				&quot;Scotland West&quot;, IF($CustomMetadata.ProductSetting__mdt.OrgDefaultProductSettings.FocusFiveScotland__c + IF(ISBLANK(aforza__Purchase_Date__c), DATE(2022,01,01), aforza__Purchase_Date__c) &lt;= TODAY(), &quot;Lapsed&quot;, &quot;Not Lapsed&quot;),
				&quot;Unknown Sales Region&quot;
), &quot;Not Focus 5 Product&quot;)</formula>
    <label>Focus 5 Status</label>
    <type>Text</type>
</CustomField>