src/main/default/objects/aforza__Outlet_Asset__c/fields/Franchise_Snapple_San_Ben_Bundaberg__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Snapple_San_Ben_Bundaberg__c</fullName>
    <description>Productivity</description>
    <inlineHelpText>Productivity</inlineHelpText>
    <label>Franchise - Snapple, San Ben, Bundaberg</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>