src/main/default/objects/aforza__Outlet_Asset__c/fields/In_Call_Productivity__c.field-meta.xml
<CustomField>
    <fullName>In_Call_Productivity__c</fullName>
    <description>Productivity Audit</description>
    <inlineHelpText>Productivity Audit</inlineHelpText>
    <label>In Call Productivity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>