src/main/default/objects/aforza__Outlet_Asset__c/fields/IrnBruFamilyAllSkusIncIbe__c.field-meta.xml
<CustomField>
    <fullName>IrnBruFamilyAllSkusIncIbe__c</fullName>
    <description>Productivity</description>
    <inlineHelpText>Productivity</inlineHelpText>
    <label>Irn Bru Family - All SKUs inc IBE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>