src/main/default/objects/aforza__Outlet_Asset__c/fields/Is_Irn_Bru_PHENOMENAL_POS_In_Situ__c.field-meta.xml
<CustomField>
    <fullName>Is_Irn_Bru_PHENOMENAL_POS_In_Situ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Is Irn Bru PHENOMENAL POS In-Situ?</label>
    <type>Checkbox</type>
</CustomField>