src/main/default/objects/aforza__Outlet_Asset__c/fields/KaFamilyAllSkus__c.field-meta.xml
<CustomField>
    <fullName>KaFamilyAllSkus__c</fullName>
    <description>Productivity</description>
    <inlineHelpText>Productivity</inlineHelpText>
    <label>KA Family - All SKU&apos;s</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>