src/main/default/objects/aforza__Outlet_Asset__c/fields/Merchandised_Replenished_the_Chiller__c.field-meta.xml
<CustomField>
    <fullName>Merchandised_Replenished_the_Chiller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Merchandised / Replenished the Chiller</label>
    <type>Checkbox</type>
</CustomField>