src/main/default/objects/aforza__Outlet_Asset__c/fields/No_cases_opened_merchandised__c.field-meta.xml
<CustomField>
    <fullName>No_cases_opened_merchandised__c</fullName>
    <description>Call Productivity</description>
    <inlineHelpText>Call Productivity</inlineHelpText>
    <label>No: cases opened &amp; merchandised</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>