src/main/default/objects/aforza__Outlet_Asset__c/fields/NoNewPiecesOfPOSPlacedToday__c.field-meta.xml
<CustomField>
    <fullName>NoNewPiecesOfPOSPlacedToday__c</fullName>
    <description>Call Productivity</description>
    <inlineHelpText>Call Productivity</inlineHelpText>
    <label>No:NEW pieces of POS placed today?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>