src/main/default/objects/aforza__Outlet_Asset__c/fields/Nothing__c.field-meta.xml
<CustomField>
    <fullName>Nothing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Nothing</label>
    <type>Checkbox</type>
</CustomField>