src/main/default/objects/aforza__Outlet_Asset__c/fields/Number_of_AG_Barr_POS_are_In_Situ__c.field-meta.xml
<CustomField>
    <fullName>Number_of_AG_Barr_POS_are_In_Situ__c</fullName>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Number of AG Barr POS are In-Situ?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>