src/main/default/objects/aforza__Outlet_Asset__c/fields/Other_Barr_Products__c.field-meta.xml
<CustomField>
    <fullName>Other_Barr_Products__c</fullName>
    <description>Productivity</description>
    <inlineHelpText>Productivity</inlineHelpText>
    <label>Other Barr Products</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>