src/main/default/objects/aforza__Outlet_Asset__c/fields/OtherFlavouredSparklingWaterStocked__c.field-meta.xml
<CustomField>
    <fullName>OtherFlavouredSparklingWaterStocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Other Flavoured Sparkling water stocked?</label>
    <type>Checkbox</type>
</CustomField>