src/main/default/objects/aforza__Outlet_Asset__c/fields/Perfect_Store_Met__c.field-meta.xml
<CustomField>
    <fullName>Perfect_Store_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the perfect store condition is met</description>
    <inlineHelpText>Indicates if the perfect store condition is met</inlineHelpText>
    <label>Perfect Store Met?</label>
    <type>Checkbox</type>
</CustomField>