src/main/default/objects/aforza__Outlet_Asset__c/fields/PerfectScoreProduct__c.field-meta.xml
<CustomField>
    <fullName>PerfectScoreProduct__c</fullName>
    <formula>IF(aforza__Account__r.ShippingState = &quot;England&quot;, aforza__Product__r.PsProductEngland__c, IF(aforza__Account__r.ShippingState = &quot;Scotland&quot;, aforza__Product__r.PsProductScotland__c, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfect Score Product</label>
    <type>Checkbox</type>
</CustomField>