src/main/default/objects/aforza__Outlet_Asset__c/fields/PerfectScoreRate__c.field-meta.xml
<CustomField>
    <fullName>PerfectScoreRate__c</fullName>
    <formula>IF(aforza__Account__r.ShippingState = &quot;England&quot;, aforza__Product__r.PsRateEngland__c, IF(aforza__Account__r.ShippingState = &quot;Scotland&quot;, aforza__Product__r.PsRateScotland__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfect Score Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>