src/main/default/objects/aforza__Outlet_Asset__c/fields/PerfectScoreWeight__c.field-meta.xml
<CustomField>
    <fullName>PerfectScoreWeight__c</fullName>
    <formula>IF(aforza__Account__r.ShippingState = &quot;England&quot;, aforza__Product__r.PsWeightEngland__c, IF(aforza__Account__r.ShippingState = &quot;Scotland&quot;, aforza__Product__r.PsWeightScotland__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfect Score Weight</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>