src/main/default/objects/aforza__Outlet_Asset__c/fields/Presented_another_missing_brand__c.field-meta.xml
<CustomField>
    <fullName>Presented_another_missing_brand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Presented another missing brand</label>
    <type>Checkbox</type>
</CustomField>