src/main/default/objects/aforza__Outlet_Asset__c/fields/Presented_Priority_Brand_1__c.field-meta.xml
<CustomField>
    <fullName>Presented_Priority_Brand_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Presented Priority Brand 1</label>
    <type>Checkbox</type>
</CustomField>