src/main/default/objects/aforza__Outlet_Asset__c/fields/PS_Product_Scotland__c.field-meta.xml
<CustomField>
    <fullName>PS_Product_Scotland__c</fullName>
    <formula>aforza__Product__r.PS_Product_Scotland__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Product Scotland</label>
    <type>Checkbox</type>
</CustomField>