src/main/default/objects/aforza__Outlet_Asset__c/fields/PS_Rate_Scotland__c.field-meta.xml
<CustomField>
    <fullName>PS_Rate_Scotland__c</fullName>
    <formula>aforza__Product__r.PS_Rate_Scotland__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Rate Scotland</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>