src/main/default/objects/aforza__Outlet_Asset__c/fields/PS_Weight_Scotland__c.field-meta.xml
<CustomField>
    <fullName>PS_Weight_Scotland__c</fullName>
    <formula>aforza__Product__r.PS_Weight_Scotland__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Weight Scotland</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>