src/main/default/objects/aforza__Outlet_Asset__c/fields/PsWeightEngland__c.field-meta.xml
<CustomField>
    <fullName>PsWeightEngland__c</fullName>
    <formula>aforza__Product__r.PsWeightEngland__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Weight England</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>