src/main/default/objects/aforza__Outlet_Asset__c/fields/Put_up_POS__c.field-meta.xml
<CustomField>
    <fullName>Put_up_POS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Put up POS</label>
    <type>Checkbox</type>
</CustomField>