src/main/default/objects/aforza__Outlet_Asset__c/fields/Rubicon_Family_All_SKU_s_Count__c.field-meta.xml
<CustomField>
    <fullName>Rubicon_Family_All_SKU_s_Count__c</fullName>
    <description>Productivity</description>
    <inlineHelpText>Productivity</inlineHelpText>
    <label>Rubicon Family - All SKU&apos;s Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>