src/main/default/objects/aforza__Outlet_Asset__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>IF (PerfectStoreMet__c = TRUE, PerfectScoreRate__c * PerfectScoreWeight__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>