src/main/default/objects/aforza__Outlet_Asset__c/fields/Sun_Exotic_Family_All_Brands__c.field-meta.xml
<CustomField>
    <fullName>Sun_Exotic_Family_All_Brands__c</fullName>
    <description>Productivity</description>
    <inlineHelpText>Productivity</inlineHelpText>
    <label>Sun Exotic Family - All Brands</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>